# codebase-memory-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Handoff.md  MAINTAINERS.md  Makefile.cbm  README.md  Rust-Refactor.md  SECURITY.md  Tasks.md
.github/: CODEOWNERS
.github/workflows/: _lint.yml  _rust.yml  _security.yml  osv-scanner.yml  pr.yml  release.yml  syft.yml  trivy.yml
docs/: Handoff.md  Rust-Refactor.md  Tasks.md  rust-refactor-baseline.md  rust-refactor-current-handoff.md  rust-refactor-phase3-plan.md
internal/cbm/: cbm.c  helpers.c  helpers.h
pkg/npm/: codebase-memory-mcp-0.8.1.tgz
rust/: CBM_FFI.md
rust/cbm-core/: Cargo.toml
rust/cbm-core/src/: ast_profile_classifiers.rs  cli_archive.rs  cypher_label_alt_match.rs  cypher_regex_shape.rs  discover.rs  ffi.rs  ffi_ast_profile_codec_only.rs  ffi_checked_exception.rs  ffi_diagnostics_format_only.rs  ffi_diagnostics_only.rs  ffi_gitignore_only.rs  ffi_graph_buffer_mutation_only.rs  ffi_hash_table_only.rs  ffi_k8s_file_classifiers.rs  ffi_language_only.rs  ffi_mem_only.rs  ffi_pipeline_fqn_only.rs  ffi_pipeline_path_alias_only.rs  ffi_pipeline_registry_only.rs  ffi_pipeline_worker_pool_only.rs  ffi_profile_only.rs  ffi_route_args.rs  ffi_route_node_classifiers.rs  ffi_semantic_config_only.rs  ffi_semantic_proximity_only.rs  ffi_semantic_tokenize_only.rs  ffi_semantic_vector_only.rs  ffi_slab_alloc_only.rs  ffi_str_util_only.rs  ffi_system_info_only.rs  ffi_userconfig_only.rs  fts_sqlite.rs  git_context.rs  language_name.rs  lib.rs  log_path.rs  pipeline_calls.rs  pipeline_compile_commands.rs  pipeline_complexity.rs  pipeline_configlink.rs  (+22 more)
rust/cbm-core/src/cli/: hook.rs  mod.rs  progress_sink.rs  version.rs
rust/cbm-core/src/cypher/: mod.rs
rust/cbm-core/src/foundation/: arena.rs  compat.rs  diagnostics.rs  dump_verify.rs  hash_table.rs  log.rs  mem.rs  mod.rs  platform.rs  profile.rs  str_intern.rs  str_util.rs  yaml.rs
rust/cbm-core/src/mcp/: mod.rs
rust/cbm-core/src/pipeline/: artifact.rs  compile_flags.rs  configures.rs  cross_repo_json.rs  exception.rs  fqn.rs  gitdiff.rs  githistory.rs  graph_mutation.rs  infrascan.rs  mod.rs  module.rs  plan.rs  registry.rs  route.rs  test_detect.rs
rust/cbm-core/src/store/: arch_helpers.rs  mod.rs  open.rs  pragmas.rs  schema_manifest.rs  search_pattern.rs  tokenization.rs
scripts/: lint.sh  rust-baseline-fixtures.py  rust-check.sh  rust-language-graph-parity.py  rust-large-performance-baseline.py  rust-security-allowlist.txt  rust-security-audit.py  rust-self-index-baseline.py  smoke-invariants.sh  test.sh
src/cli/: archive_helpers.c  archive_helpers.h  cli.c  hook_augment.c  progress_sink.c  progress_sink.h
src/cypher/: cypher.c  cypher_agg_func.c  cypher_agg_func.h  cypher_lex_single_char.c  cypher_lex_single_char.h  cypher_lex_two_char.c  cypher_lex_two_char.h  cypher_string_func.c  cypher_string_func.h  label_alt_match.c  label_alt_match.h  regex_shape.c  regex_shape.h
src/discover/: discover.c  discover.h  discover_string_helpers.c  discover_string_helpers.h  filters.c  gitignore.c  language.c  language_markers.c  language_markers.h  language_name.c  language_name.h  local_rel_path.c  local_rel_path.h  path_join.c  path_join.h  trailing_sep.c  trailing_sep.h  userconfig.c  userconfig_app_config_ffi_stub.c  userconfig_bridge.c  userconfig_bridge_stub.c  userconfig_ffi_stub.c
src/foundation/: arena_sprintf.c  compat_fs.c  compat_regex.c  compat_thread.c  diagnostics.c  diagnostics.h  diagnostics_ffi_stub.c  diagnostics_rust_bridge.c  dump_verify.c  log.c  log.h  log_path.c  log_path.h  mem.c  mem_ffi_stub.c  mem_rust_bridge.c  mem_system_info_ffi_stub.c  platform.c  profile.c  str_intern.c  str_util.c  system_info.c  vmem.c  yaml.c
src/git/: git_context.c  json_escaped_len.c  json_escaped_len.h  path_absolute.c  path_absolute.h  trim_newlines.c  trim_newlines.h
src/graph_buffer/: graph_buffer.h  graph_buffer_mutation.c
src/mcp/: adr_mode.c  adr_mode.h  architecture_aspect_wanted.c  architecture_aspect_wanted.h  bm25_build_match.c  bm25_build_match.h  bm25_file_pattern_like.c  bm25_file_pattern_like.h  content_length_header_is_blank.c  content_length_header_is_blank.h  content_length_header_matches.c  content_length_header_matches.h  detect_changes_label.c  detect_changes_label.h  detect_changes_scope.c  detect_changes_scope.h  detect_changes_status.c  detect_changes_status.h  edge_type_valid.c  edge_type_valid.h  index_mode.c  index_mode.h  mcp.c  mcp.h  method_kind.c  method_kind.h  method_not_found_error.c  method_not_found_error.h  node_resolution_score.c  node_resolution_score.h  parse_file_uri.c  parse_file_uri.h  ping_result.c  ping_result.h  project_db_file_name.c  project_db_file_name.h  sanitize_ascii_in_place.c  sanitize_ascii_in_place.h  sanitize_utf8_lossy.c  sanitize_utf8_lossy.h  (+30 more)
src/pipeline/: artifact.c  artifact_path.c  artifact_path.h  calls_json.c  calls_json.h  checked_exception.c  compile_flags.c  compile_flags.h  configlink_helpers.c  configlink_helpers.h  configlink_path_basename.c  configlink_path_basename.h  cross_repo_json.c  cross_repo_json.h  definitions_json.c  definitions_json.h  enrichment_tokens.c  enrichment_tokens.h  envscan_classifiers.c  envscan_classifiers.h  fqn.c  incremental_edge_type.c  incremental_edge_type.h  incremental_registry_label.c  incremental_registry_label.h  infrascan_json.c  infrascan_json.h  json_prop.c  json_prop.h  k8s_file_classifiers.c  k8s_text_helpers.c  k8s_text_helpers.h  lsp_cross_classifiers.c  lsp_cross_classifiers.h  (+68 more)
tests/: test_artifact.c  test_compat.c  test_cypher.c  test_cypher_contract.c  test_diagnostics.c  test_discover.c  test_dump_verify.c  test_foundation_main.c  test_graph_buffer.c  test_hash_table.c  test_language.c  test_log.c  test_main.c  test_mcp.c  test_parent_watchdog.sh  test_pipeline.c  test_platform.c  test_profile.c  test_progress_sink.c  test_registry.c  test_route_canon.c  test_rust_ffi.c  test_store_arch.c  test_store_compat.c  test_store_nodes.c  test_store_pragmas.c  test_store_search.c  test_str_intern.c  test_str_util.c  test_userconfig.c
(+48 files in other folders)
