[package]
name = "cbm-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[features]
pipeline-split-command-only = []
traces-only = []
pipeline-configures-only = []
pipeline-project-name-only = []
pipeline-fqn-only = []
pipeline-registry-only = []
pipeline-artifact-path-only = []
pipeline-test-detect-only = []
pipeline-test-node-is-test-only = []
pipeline-checked-exception-only = []
pipeline-route-args-only = []
pipeline-route-node-classifiers-only = []
pipeline-sveltekit-file-kind-only = []
pipeline-sveltekit-server-method-only = []
pipeline-json-prop-only = []
pipeline-lsp-classifiers-only = []
pipeline-url-path-only = []
pipeline-k8s-file-classifiers-only = []
graph-buffer-mutation-only = []
progress-sink-only = []
cli-version-only = []
cli-hook-token-only = []
git-path-absolute-only = []
git-json-escaped-len-only = []
git-trim-newlines-only = []
log-copy-path-only = []
system-info-only = []
pipeline-worker-pool-only = []
slab-alloc-only = []
profile-only = []
ast-profile-codec-only = []
ast-profile-classifiers-only = []
semantic-vector-only = []
semantic-proximity-only = []
semantic-tokenize-only = []
semantic-camel-break-only = []
semantic-token-delim-only = []
semantic-config-only = []
discover-language-only = []
discover-language-name-only = []
discover-language-markers-only = []
discover-filters-only = []
discover-local-rel-path-only = []
discover-gitignore-only = []
discover-string-helpers-only = []
discover-trailing-sep-only = []
discover-path-join-only = []
pipeline-incremental-edge-only = []
pipeline-parallel-json-only = []
pipeline-definitions-json-only = []
pipeline-similarity-fp-only = []
pipeline-semantic-fp-suffix-only = []
pipeline-incremental-registry-label-only = []
mcp-edge-type-only = []
discover-userconfig-only = []
watcher-poll-interval-only = []
str-intern-only = []
dump-verify-only = []
yaml-only = []
store-search-pattern-only = []
platform-path-only = []
compat-thread-only = []
store-fts-tokenizer-only = []
store-arch-helpers-only = []
store-file-ext-only = []
store-immutable-uri-only = []
store-mmap-resolver-only = []
store-arch-path-scope-only = []
str-util-only = []
hash-table-only = []
diagnostics-format-only = []
diagnostics-only = []
pipeline-path-alias-only = []
mem-only = []
compat-fs-only = []
arena-only = []
compat-regex-only = []
cypher-agg-func-only = []
cypher-lex-single-char-only = []
cypher-lex-two-char-only = []
cypher-multiarg-func-only = []
cypher-scalar-func-only = []
cypher-string-func-only = []
log-env-parse-only = []
mcp-codec-only = []
pipeline-gitdiff-hunks-only = []
pipeline-gitdiff-name-status-only = []
pipeline-gitdiff-range-only = []
pipeline-githistory-only = []
cli-archive-helpers-only = []
pipeline-k8s-helpers-only = []
simhash-jaccard-only = []
pipeline-envscan-classifiers-only = []
pipeline-configlink-helpers-only = []
pipeline-infrascan-only = []
pipeline-infrascan-json-only = []
pipeline-module-dir-only = []
pipeline-plan-only = []
pipeline-registry-test-qn-only = []
pipeline-route-canon-only = []
platform-cgroup-only = []
platform-env-dirs-only = []
profile-env-only = []
store-language-map-only = []

[lints]
workspace = true
