[package]
name = "cbm-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[features]
pipeline-split-command-only = []
pipeline-enrichment-tokens-only = []
pipeline-pkgmap-text-only = []
pipeline-calls-json-only = []
pipeline-usages-json-only = []
traces-only = []
pipeline-configures-only = []
pipeline-project-name-only = []
pipeline-fqn-only = []
pipeline-registry-only = []
pipeline-artifact-path-only = []
pipeline-test-detect-only = []
pipeline-test-node-is-test-only = []
pipeline-checked-exception-only = []
pipeline-route-args-only = []
pipeline-route-node-classifiers-only = []
pipeline-sveltekit-file-kind-only = []
pipeline-sveltekit-server-method-only = []
pipeline-json-prop-only = []
pipeline-lsp-classifiers-only = []
pipeline-url-path-only = []
pipeline-k8s-file-classifiers-only = []
graph-buffer-mutation-only = []
progress-sink-only = []
cli-version-only = []
cli-hook-token-only = []
git-path-absolute-only = []
git-json-escaped-len-only = []
git-trim-newlines-only = []
log-copy-path-only = []
system-info-only = []
pipeline-worker-pool-only = []
slab-alloc-only = []
profile-only = []
ast-profile-codec-only = []
ast-profile-classifiers-only = []
semantic-vector-only = []
semantic-proximity-only = []
semantic-tokenize-only = []
semantic-camel-break-only = []
semantic-token-delim-only = []
semantic-config-only = []
discover-language-only = ["discover-language-name-only", "discover-language-markers-only", "discover-string-helpers-only"]
discover-language-name-only = []
discover-language-markers-only = []
discover-filters-only = []
discover-local-rel-path-only = []
discover-gitignore-only = []
discover-string-helpers-only = []
discover-trailing-sep-only = []
discover-path-join-only = []
pipeline-incremental-edge-only = []
pipeline-parallel-json-only = []
pipeline-definitions-json-only = []
pipeline-similarity-fp-only = []
pipeline-similarity-file-ext-only = []
pipeline-semantic-fp-suffix-only = []
pipeline-incremental-registry-label-only = []
mcp-edge-type-only = []
mcp-search-mode-only = []
mcp-index-mode-only = []
mcp-search-path-arg-only = []
mcp-search-line-span-only = []
mcp-search-args-only = []
mcp-search-score-cmp-only = []
mcp-search-code-score-only = []
mcp-search-top-dir-only = []
mcp-detect-changes-scope-only = []
mcp-detect-changes-label-only = []
mcp-detect-changes-status-only = []
mcp-node-resolution-score-only = []
mcp-utf8-is-cont-only = []
mcp-adr-mode-only = []
mcp-trace-mode-edge-mask-only = []
mcp-trace-is-test-file-only = []
mcp-project-db-file-name-only = []
mcp-sanitize-ascii-in-place-only = []
mcp-bm25-file-pattern-like-only = []
mcp-bm25-build-match-only = []
mcp-sanitize-utf8-lossy-only = []
mcp-architecture-aspect-wanted-only = []
mcp-strip-root-prefix-only = []
mcp-search-pick-tightest-only = []
mcp-search-pick-resolved-only = []
mcp-method-kind-only = []
mcp-parse-file-uri-only = []
mcp-tools-page-bounds-only = []
mcp-tools-cursor-offset-only = []
mcp-content-length-header-matches-only = []
mcp-content-length-header-is-blank-only = []
mcp-ping-result-only = []
mcp-method-not-found-error-only = []
discover-userconfig-only = []
watcher-poll-interval-only = []
str-intern-only = []
dump-verify-only = []
yaml-only = []
store-search-pattern-only = []
platform-path-only = []
compat-thread-only = []
store-fts-tokenizer-only = []
store-arch-helpers-only = []
store-arch-aspect-filter-only = []
store-file-ext-only = []
store-package-list-only = []
store-safe-props-only = []
store-immutable-uri-only = []
store-mmap-resolver-only = []
store-arch-path-scope-only = []
str-util-only = []
hash-table-only = []
diagnostics-format-only = []
diagnostics-only = []
pipeline-path-alias-only = []
mem-only = []
compat-fs-only = []
arena-only = []
compat-regex-only = []
cypher-agg-func-only = []
cypher-lex-single-char-only = []
cypher-lex-two-char-only = []
cypher-multiarg-func-only = []
cypher-regex-shape-only = []
cypher-label-alt-match-only = []
cypher-scalar-func-only = []
cypher-string-func-only = []
log-env-parse-only = []
mcp-codec-only = []
pipeline-gitdiff-hunks-only = []
pipeline-gitdiff-name-status-only = []
pipeline-gitdiff-range-only = []
pipeline-githistory-only = []
cli-archive-helpers-only = []
pipeline-k8s-helpers-only = []
simhash-jaccard-only = []
pipeline-envscan-classifiers-only = []
pipeline-configlink-helpers-only = []
pipeline-configlink-path-basename-only = []
pipeline-infrascan-only = []
pipeline-infrascan-json-only = []
pipeline-module-dir-only = []
pipeline-plan-only = []
pipeline-registry-test-qn-only = []
pipeline-route-canon-only = []
platform-cgroup-only = []
platform-env-dirs-only = []
profile-env-only = []
store-language-map-only = []
pipeline-is-env-var-name-only = []
pipeline-normalize-config-key-only = []
pipeline-has-config-extension-only = []
pipeline-compile-flags-only = []
pipeline-cross-repo-json-only = []

[lints]
workspace = true
